Closed Bug 1173287 Opened 10 years ago Closed 10 years ago

[Music]When user playes some of the music and then drag the progress slider to end, the begin time of the music will display confusion.

Categories

(Firefox OS Graveyard :: Gaia::Music, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:2.2+, b2g-v2.0 affected, b2g-v2.1 affected, b2g-v2.2 verified, b2g-master unaffected)

VERIFIED FIXED
FxOS-S1 (26Jun)
blocking-b2g 2.2+
Tracking Status
b2g-v2.0 --- affected
b2g-v2.1 --- affected
b2g-v2.2 --- verified
b2g-master --- unaffected

People

(Reporter: wangxin, Assigned: sotaro)

References

Details

(Whiteboard: [v2.2-nexus-5-l] )

Attachments

(5 files, 1 obsolete file)

[1.Description]: [Nexus 5][v2.2][Flame][v2.2][Music]Play the special music(I've attached example.), then drag the progress slider to end, device will not automatically advance to the next song or back to track list, but the elapsed time is not normally displayed, and play button can not work. See special music:"群星 - 绝世.mp3" and"dj - 魅惑钢琴.mp3" See video:"1355.mp4" See log :"logcat_1355.txt" Found time: 13:55 [2.Testing Steps]: 1. Launch Music. 2. Play the song(I've attached example.) . 3. Drag progress bar to the end. [3.Expected Result]: 3. Device should automatically advance to the next song or back to track list, [4.Actual Result]: 3. Device will not automatically advance to the next song or back to track list, but the elapsed time is not normally displayed, and play button can not work. [5.Reproduction build]: N5 v2.2 build (Affected): Build ID 20150609081832 Gaia Revision 06edb0f8db7c2f45cde54401a8593663059861a4 Gaia Date 2015-06-08 14:29:09 Gecko Revision https://hg.mozilla.org/releases/mozilla-b2g37_v2_2/rev/239c59921129 Gecko Version 37.0 Device Name hammerhead Firmware(Release) 5.1 Firmware(Incremental) eng.cltbld.20150609.121628 Firmware Date Tue Jun 9 12:16:44 EDT 2015 Bootloader HHZ12f N5 v3.0 build (Unaffected): Build ID 20150609081840 Gaia Revision ea27c4ed5b6083c9e21d233d4804372ac4d5d353 Gaia Date 2015-06-08 03:06:41 Gecko Revision https://hg.mozilla.org/mozilla-central/rev/e10e2e8d8bf2 Gecko Version 41.0a1 Device Name hammerhead Firmware(Release) 5.1 Firmware(Incremental) eng.cltbld.20150609.121002 Firmware Date Tue Jun 9 12:10:19 EDT 2015 Bootloader HHZ11k Flame v2.2 build (Affected): Build ID 20150609081832 Gaia Revision 06edb0f8db7c2f45cde54401a8593663059861a4 Gaia Date 2015-06-08 14:29:09 Gecko Revision https://hg.mozilla.org/releases/mozilla-b2g37_v2_2/rev/239c59921129 Gecko Version 37.0 Device Name flame Firmware(Release) 4.4.2 Firmware(Incremental) eng.cltbld.20150609.122002 Firmware Date Tue Jun 9 12:20:13 EDT 2015 Bootloader L1TC000118D0 Flame v3.0 build (Unaffected): Build ID 20150609160220 Gaia Revision 31ef8deec7a04a988eb92309178b87cc0bde8220 Gaia Date 2015-06-08 14:48:40 Gecko Revision https://hg.mozilla.org/mozilla-central/rev/8be8deb10e4f Gecko Version 41.0a1 Device Name flame Firmware(Release) 4.4.2 Firmware(Incremental) eng.cltbld.20150609.193617 Firmware Date Tue Jun 9 19:36:29 EDT 2015 Bootloader L1TC000118D0 [6.Reproduction Frequency]: occasionally Recurrence,4/5 [7.TCID]: Free Test
Attached video Bug video: 1355.mp4
See Also: → 1095382
It seems a regression bug. Please help find the window.
QA Contact: ktucker
This also occurs on the Flame 2.1 and Flame 2.0 The elapsed time displays abnormally and the song doesn't automatically start. Device: Flame 2.1 (Full Flash)(KK)(319mb) BuildID: 20150611001204 Gaia: f8b848c82d1ed589f7a1eb5cc099830c867ff1d4 Gecko: 7d767fc15126 Gonk: bd9cb3af2a0354577a6903917bc826489050b40d Version: 34.0 (2.1) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:34.0) Gecko/34.0 Firefox/34.0 Environmental Variables: Device: Flame 2.0(Full Flash)(KK)(319mb) BuildID: 20150611000206 Gaia: 5552bf529d3d6775a968942e9afa6c1d4037362c Gecko: 4e67cca8f25c Gonk: bd9cb3af2a0354577a6903917bc826489050b40d Version: 32.0 (2.0) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:32.0) Gecko/32.0 Firefox/32.0 I am seeing the elapsed time issue flash for a second on Flame 3.0 but the next track always plays automatically. Device: Flame 3.0 BuildID: 20150611010205 (Full Flash)(KK)(319mb) Gaia: d2f31eb85837aae6eca04d022d1f5b2023bc778c Gecko: bfd82015df48 Gonk: a4f6f31d1fe213ac935ca8ede7d05e47324101a4 Version: 41.0a1 (3.0) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:41.0) Gecko/41.0 Firefox/41.0 I will get the reverse regression window for the next track not automatically playing.
Reverse regression window Mozilla Inbound Last Broken Device: Flame 3.0 BuildID: 20150514154002 Gaia: 8897e1810aa6426ca483269af76ce2bfd2029d25 Gecko: 69273adcc964 Version: 41.0a1 (3.0) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:41.0) Gecko/41.0 Firefox/41.0 First Working Device: Flame 3.0 BuildID: 20150514154901 Gaia: 8897e1810aa6426ca483269af76ce2bfd2029d25 Gecko: b3b16e2def47 Version: 41.0a1 (3.0) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:41.0) Gecko/41.0 Firefox/41.0 Last Broken Gaia Last Working Gecko: Issue DOES reproduce Gaia: 8897e1810aa6426ca483269af76ce2bfd2029d25 Gecko: 69273adcc964 First Working Gaia First Broken Gecko: Issue does NOT reproduce Gaia: 8897e1810aa6426ca483269af76ce2bfd2029d25 Gecko: b3b16e2def47 Gecko pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=69273adcc964&tochange=b3b16e2def47 This was fixed by the landing for bug 1164697
Sotaro, can we get the fix for bug 1164697 uplifted to 2.2?
QA Whiteboard: [QAnalyst-Triage+]
Depends on: 1164697
Flags: needinfo?(sotaro.ikeda.g)
(In reply to KTucker [:KTucker] from comment #7) > Sotaro, can we get the fix for bug 1164697 uplifted to 2.2? I do not think bug 1164697 fix this bug. bug 1164697 just fix audio time's scaling regression of bug 1162803. bug 1162803 seems actually fix the problem. But it could not be uplifted to b2g v2.2.
Flags: needinfo?(sotaro.ikeda.g)
I am going to check what happening on v2.2
Assignee: nobody → sotaro.ikeda.g
I investigated more, bug 1164697 seems falsely found because of bug 1162803's regression. Bug 1139206 seems actual correct fix. But it also can not uplift to b2g v2.2.
In the STR, MediaDecoder::PlaybackEnded() is called during seeking. In this case, MediaDecoder::SeekingStoppedAtEnd() have to be called.
b2g v2.2 only patch.
We could not uplift the master code. Then I created a patch for b2g v2.2. I confirmed that the patch fixes the problem.
Attachment #8621850 - Flags: review?(bwu)
blocking-b2g: --- → 2.2?
Comment on attachment 8621850 [details] [diff] [review] patch for b2g v2.2 - Add calling SeekingStoppedAtEnd() Review of attachment 8621850 [details] [diff] [review]: ----------------------------------------------------------------- Looks good to me!
Attachment #8621850 - Flags: review?(bwu) → review+
Update nits. Carry "r=bwu".
Attachment #8621850 - Attachment is obsolete: true
Attachment #8622466 - Flags: review+
Comment on attachment 8622466 [details] [diff] [review] patch for b2g v2.2 - Add calling SeekingStoppedAtEnd() NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings. [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 976172 User impact if declined: When user seek audio file until end, seek bar status might becomes incorrect. Testing completed: locally tested. Risk to taking this patch (and alternatives if risky): low. String or UUID changes made by this patch: none.
Attachment #8622466 - Flags: approval-mozilla-b2g37?
Flags: needinfo?(jocheng)
Comment on attachment 8622466 [details] [diff] [review] patch for b2g v2.2 - Add calling SeekingStoppedAtEnd() Approving as this could cause potential function broken.
Flags: needinfo?(jocheng)
Attachment #8622466 - Flags: approval-mozilla-b2g37? → approval-mozilla-b2g37+
blocking-b2g: 2.2? → 2.2+
Keywords: verifyme
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → NGA S3 (26Jun)
Hi Brogan, Could you verify this bug and then try bug 1173643?
Flags: needinfo?(bzumwalt)
Issue verified fixed on Flame 2.2 While playing attachment 8617818 [details] on device, dragging progress slider to end results in next song in playlist playing with current time and time remaining displaying correctly. In addition, the title of the song displays correctly on header and in notification tray. User is not returned to track listing screen unexpectedly. Device: Flame 2.2 Build ID: 20150618002507 Gaia: 3414b07dc489976bf510fd8042c0af3b1192c160 Gecko: a2db74491088 Gonk: bd9cb3af2a0354577a6903917bc826489050b40d Version: 37.0 (2.2) Firmware Version: v18D-1 User Agent: Mozilla/5.0 (Mobile; rv:37.0) Gecko/37.0 Firefox/37.0
Status: RESOLVED → VERIFIED
QA Whiteboard: [QAnalyst-Triage+] → [QAnalyst-Triage?]
Flags: needinfo?(bzumwalt) → needinfo?(ktucker)
Keywords: verifyme
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(ktucker)
As NGA Program Manager suggested, let's replace the NGA-Sx milestones with FxOS-Sx ones (more generic ones), once Bug 1174794 has already landed
Target Milestone: NGA S3 (26Jun) → FxOS-S1 (26Jun)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: