Bug 1173287 - Add calling SeekingStoppedAtEnd(). r=bwu, a=jocheng